fixing awkward line wrap

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -22,7 +22,8 @@ body {
 	color: $foreground;
 	font-family: 'Fira Sans';
 	font-style: normal;
-    font-size: max(12pt, 2vmin);
+    // font-size: clamp(12px, 2vmin, 18px);
+    font-size: 18px;
 }
 
 hr {
@@ -44,6 +45,7 @@ hr {
 .main_text, .licence_year {
     line-height: 1.3;
     max-width: 80ch;
+    display: inline-block;
 }
 
 .navbar {
